app/src/test/resources/programs/invalid/foreign/with_body.exe
foreign foo get_zero() -> Int = 0

foo main() -> Int {
    get_zero() 
}